# ThermalView

./: .gitignore  .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
src/: AppDelegate.hpp  AppDelegate.mm  Config.hpp  ThermalDevice.hpp  main.mm
